# voxr

./: .coverage  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
.specify/: feature.json
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
.specify/workflows/: workflow-registry.json
docs/: config-schema.md  voxr-prd.md
specs/001-voxr-voice-dictation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-voxr-voice-dictation/checklists/: requirements.md
specs/001-voxr-voice-dictation/contracts/: module-interfaces.md
tests/fixtures/: config_fixtures.py
tests/integration/: conftest.py  test_audio.py  test_audio_fixture.py  test_dictation_flow.py  test_settings_flow.py
tests/unit/: conftest.py  test_app_cleanup.py  test_app_model_check.py  test_app_settings.py  test_audio.py  test_config.py  test_hotkey.py  test_injection.py  test_main.py  test_models.py  test_scaffold.py  test_settings_window.py  test_transcription.py  test_tray.py  test_widget.py
voxr/: __main__.py  app.py  audio.py  config.py  constants.py  enums.py  hotkey.py  injection.py  models.py  settings_window.py  transcription.py  tray.py  widget.py
voxr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
